syntax = "proto3";

package org.server.rpc.generated;
option java_package = "org.server.rpc.generated";
option java_generic_services = true; // 可以生成rpc介面
option java_multiple_files = true;  // java 生成多類


service HelloService {
  rpc sayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
